<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@drawable/top_bar"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/score_placeholder"
            style="@style/textViewBasicStyle"
            />



    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutQuestionContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/question_container"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sample_question"
            style="@style/textViewBasicStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutAnswersContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"

        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAnswer1"
            style="@style/answer_button_style"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAnswer2"
            style="@style/answer_button_style"

             />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAnswer3"
            style="@style/answer_button_style"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAnswer4"
            style="@style/answer_button_style"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/next_button"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/my_white"
            android:text="@string/next"
            android:textSize="22sp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            >
        </androidx.appcompat.widget.AppCompatButton>



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>